# ideall

./: .c8rc.json  .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  OPEN_SOURCE.md  README.md  REDESIGN.md  TRADEMARK.md  components.json  docker-compose.override.example.yml  docker-compose.yml  eslint.config.mjs  knip.json  next.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  run.sh  tsconfig.json
.design-sync/: NOTES.md  compile-css.mjs  config.json  conventions.md  entry.ts
.design-sync/previews/: Badge.tsx  Button.tsx  Calendar.tsx  Card.tsx  Checkbox.tsx  Command.tsx  Dialog.tsx  DropdownMenu.tsx  EmptyState.tsx  HoverCard.tsx  Input.tsx  Label.tsx  Popover.tsx  Select.tsx  Separator.tsx  Sheet.tsx  Table.tsx  Tabs.tsx  Textarea.tsx  Tooltip.tsx
.github/: FUNDING.yml  SECURITY.md  dependabot.yml
.github/workflows/: app-build.yml  ci.yml  (+5 more)
docs/: README.md  app-data-navigation.md  app-data-safety-acceptance.md  app-history.md  app.md  architecture.md  claude.md  development.md  extension-registry-design.md  extension-registry-operations.md  extensions.md  file-system-engine-architecture.md  freedesktop-alignment.md  ideall-embed-bridge.md  local-data-provider.md  mobile-share-acceptance.md  product-strategy-roadmap.md  release-0.2.md  runtime-extension-packages.md  scripts.md  sync-lww-tradeoff.md  ui-redesign-proposals.html
native/: Cargo.toml  README.md  RELEASE.md  THIRD_PARTY_LICENSES.md
native/.config/: dotnet-tools.json
native/apps/ideall-cli/: Cargo.toml
native/apps/ideall-cli/src/: main.rs
native/apps/ideall-desktop/: Cargo.toml
native/apps/ideall-desktop/src/: main.rs
native/apps/ideall-mobile/: Cargo.toml  build-mobile.sh
native/apps/ideall-mobile/src/: editor.rs  ios_host.rs  lib.rs  native_text.rs
native/crates/ideall-acp/: Cargo.toml
native/crates/ideall-acp/src/: lib.rs
native/crates/ideall-agent/: Cargo.toml
native/crates/ideall-agent/src/: lib.rs  mcp.rs  model.rs
native/crates/ideall-application/: Cargo.toml
native/crates/ideall-application/src/: lib.rs  note_document.rs  workspace.rs
native/crates/ideall-domain/: Cargo.toml
native/crates/ideall-domain/src/: engine_matcher.rs  engine_registry.rs  engine_runtime.rs  lib.rs  workspace.rs
native/crates/ideall-protocol/: Cargo.toml
native/crates/ideall-protocol/src/: engine.rs  file_system.rs  lib.rs  node.rs  sync.rs
native/crates/ideall-secrets/: Cargo.toml
native/crates/ideall-secrets/src/: lib.rs
native/crates/ideall-storage/: Cargo.toml
native/crates/ideall-storage/src/: archive.rs  database.rs  import.rs  lib.rs
native/crates/ideall-storage/tests/: typescript_parity.rs
native/crates/ideall-storage/tests/fixtures/: workspace-v2-typescript.json
native/crates/ideall-sync/: Cargo.toml
native/crates/ideall-sync-http/: Cargo.toml
native/crates/ideall-sync-http/src/: lib.rs
native/crates/ideall-sync/src/: lib.rs  notes.rs  runner.rs
native/crates/ideall-updater/: Cargo.toml
native/crates/ideall-updater/src/: lib.rs
native/scripts/: package-desktop.sh  smoke-android-emulator.sh  smoke-ios-simulator.sh  verify-artifact.sh  verify-gpui-mobile-vendor.sh  verify-linux-binary.sh
native/scripts/resources/: macos-Info.plist
native/scripts/resources/linux/: com.jinziyou.ideall.desktop  debian-control  ideall.spec
native/scripts/resources/windows/: ideall.nsi  ideall.wxs
openapi/: server.json  server.provenance.json
registry/: extensions.json
scripts/: acp-echo-agent.mjs  acp-selftest-client.mjs  app-build-gate.mjs  app-build-gate.test.mjs  app-dev.mjs  app-dev.test.mjs  build-semantic-worker.mjs  bump-version.mjs  check-bundle-budget.mjs  check-bundle-budget.test.mjs  check-docs.mjs  check-semantic-runtime-budget.mjs  check-semantic-runtime-budget.test.mjs  check-server-openapi-provenance.mjs  check-static-export.mjs  check-static-export.test.mjs  check-version.mjs  clean-next.mjs  extension-registry-artifacts.mjs  extension-registry-artifacts.test.mjs  extension-registry-publish.mjs  gen-api-check.mjs  git-entrypoints.test.mjs  git-fetch-config.mjs  git-pull.mjs  git-setup.mjs  lint-actions.mjs  lint-storage-access.mjs  lint-storage-access.test.mjs  native-mobile-config.test.mjs  native-release-artifacts.mjs  native-release-artifacts.test.mjs  process-management.test.mjs  project-version.mjs  project-version.test.mjs  release-artifacts.mjs  release-artifacts.test.mjs  release-preflight.mjs  release-publish.mjs  run-script-tests.mjs  (+19 more)
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: acp.json  apps.json  browser.json  default.json  desktop.json  engine-window.json  extensions.json  filesystem.json  shell.json
src-tauri/icons/: README.md  icon.icns
src-tauri/permissions/autogenerated/: acp_close.toml  acp_echo_script_path.toml  acp_listen_start.toml  acp_listen_stop.toml  acp_run_once.toml  acp_script_path.toml  acp_send.toml  acp_server_close.toml  acp_server_send.toml  acp_spawn.toml  acp_which.toml  agent_guarded_fetch.toml  browser_back.toml  browser_click.toml  browser_fill.toml  browser_forward.toml  browser_get_backend.toml  browser_get_content.toml  browser_hide.toml  browser_list_interactive.toml  browser_present.toml  browser_press.toml  browser_set_bounds.toml  browser_show.toml  browser_wait.toml  browser_wait_for_selector.toml  capture_take_pending.toml  guarded_fs_grant_info.toml  guarded_fs_list.toml  guarded_fs_pick_root.toml  guarded_fs_read.toml  guarded_fs_revoke_grant.toml  guarded_fs_stat.toml  guarded_fs_write_text.toml  launch_installed_app.toml  list_installed_apps.toml  oauth_callback_start.toml  oauth_callback_stop.toml  open_browser_view.toml  open_engine_window.toml  (+25 more)
src-tauri/src/: acp_transport.rs  browser_cdp.rs  browser_fab.rs  browser_linux.rs  browser_scripts.rs  browser_win.rs  capture_share.rs  extension_registry.rs  guarded_fs.rs  installed_apps.rs  lib.rs  main.rs  oauth_callback.rs  runtime_extensions.rs  secure_store.rs  window_placement.rs
(+1307 files in other folders)
