[workspace]
members = [
  "apps/ideall-desktop",
  "apps/ideall-cli",
  "apps/ideall-mobile",
  "crates/ideall-application",
  "crates/ideall-agent",
  "crates/ideall-acp",
  "crates/ideall-domain",
  "crates/ideall-protocol",
  "crates/ideall-secrets",
  "crates/ideall-storage",
  "crates/ideall-sync",
  "crates/ideall-sync-http",
  "crates/ideall-updater",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0"
authors = ["ideall contributors"]
repository = "https://github.com/jinziyou/ideall"

[workspace.dependencies]
anyhow = "1.0"
agent-client-protocol = "=1.3.0"
async-io = "2.6"
aes-gcm = "0.10"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.5"
directories = "6.0"
getrandom = "0.3"
futures = "0.3.32"
hkdf = "0.12"
keyring = "=4.1.5"
pbkdf2 = "0.12"
percent-encoding = "2.3"
rusqlite = { version = "0.38", features = ["bundled"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
shell-words = "1.1"
sha2 = "0.10"
tempfile = "3.27"
thiserror = "2.0"
url = "2.5"
ureq = { version = "=3.3.0", features = ["json"] }
unicode-segmentation = "1.12"
uuid = { version = "1.0", features = ["serde", "v4"] }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "abort"
strip = true
