[package]
name = "ideall"
version = "0.1.0"
description = "ideall — 本地优先的个人信息工作台 (Tauri 外壳)"
authors = ["ideall contributors"]
edition = "2021"
rust-version = "1.77.2"

# 库 crate 供桌面/移动两种入口共用 (移动端需 cdylib)。
[lib]
name = "ideall_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
# HTTP: App 内经 Rust 侧请求绕过浏览器 CORS (agent 直连任意 LLM 端点)。
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# agent 出站守卫 (agent_guarded_fetch 命令): 自带 reqwest client 做 resolve_to_addrs 钉连 + 解压, 闭合名解析 SSRF。
# rustls-tls 纯 Rust 跨平台 (含移动端) 免系统 OpenSSL; gzip/br/deflate 解压后计字节挡解压炸弹。
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate", "http2"] }
# DNS 解析 (lookup_host) 校验所有解析 IP; tauri 已用 tokio, 此处显式启用所需 feature。
# process/io-util/sync: ACP 外部智能体传输 (src/acp_transport.rs) 起子进程 + 行框定读 stdout + 异步会话锁 (仅桌面用)。
tokio = { version = "1", features = ["net", "process", "io-util", "sync", "rt", "time"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", features = ["v3_24"] }
gdk = "0.18"
wry = { version = "0.55", default-features = false, features = ["os-webview", "x11"] }

# 桌面自动更新 (移动端走应用商店, updater 仅桌面生效)。
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[features]
# 默认生产关闭开发者工具; `cargo tauri dev` 自动开。
custom-protocol = ["tauri/custom-protocol"]
