[package]
name = "ideall-desktop"
description = "GPUI desktop application for ideall"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
directories.workspace = true
gpui = "=0.2.2"
gpui-component = { version = "=0.5.1", features = ["tree-sitter-languages"] }
ideall-application = { path = "../../crates/ideall-application" }
ideall-acp = { path = "../../crates/ideall-acp" }
ideall-domain = { path = "../../crates/ideall-domain" }
ideall-protocol = { path = "../../crates/ideall-protocol" }
ideall-secrets = { path = "../../crates/ideall-secrets" }
ideall-sync = { path = "../../crates/ideall-sync" }
ideall-sync-http = { path = "../../crates/ideall-sync-http" }
ideall-updater = { path = "../../crates/ideall-updater" }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
gpui-component = { version = "=0.5.1", features = ["webview"] }
wry = { package = "lb-wry", version = "=0.53.3" }

[lints]
workspace = true
