[package]
name = "ideall-acp"
description = "Desktop external Agent Client Protocol adapter for ideall"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
agent-client-protocol.workspace = true
async-io.workspace = true
futures.workspace = true
shell-words.workspace = true
thiserror.workspace = true

[lints]
workspace = true
