[package]
name = "ideall-secrets"
description = "Typed access to native credential stores for ideall"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
keyring.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = "=1.0.0"
keyring-core = "=1.0.0"

[target.'cfg(target_os = "ios")'.dependencies]
apple-native-keyring-store = { version = "=1.0.1", features = ["protected"] }
keyring-core = "=1.0.0"

[lints]
workspace = true
