[package]
name = "ideall-sync-http"
description = "Authenticated HTTP adapter for the ideall partitioned sync protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ideall-sync = { path = "../ideall-sync" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ureq.workspace = true
url.workspace = true

[lints]
workspace = true
