[package]
name = "ideall-sync"
description = "End-to-end sync cryptography and convergence rules for ideall"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
aes-gcm.workspace = true
base64.workspace = true
getrandom.workspace = true
hkdf.workspace = true
ideall-protocol = { path = "../ideall-protocol" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[lints]
workspace = true
